--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <img src="image/top.png" alt="回到顶部">
                 </div>
                 <div class="myIntro">
-                    <h1 class="fade">Hello, I'm CaiSu</h1>
-                    <h3 class="fade">一个在开源世界里奋进的人</h3>
+                    <h1 class="fade">Hello, I'm XiaoCai</h1>
+                    <h3 class="fade">一个开源世界的协作者</h3>
                     <span class="active fade" id="abMe">关于我</span>
                     <span id="mypro" class="fade">我的作品</span>
                 </div>
@@ -42,7 +42,7 @@
                 <div id="nav-bar" class="bar">
                     <div class="container">
                         <a href="drip.html">
-                            <div class="fl">CaiSu博客</div>
+                            <div class="fl">CaiWeb.cn</div>
                         </a>
                         <ul class="fr nav-ul">
                             <li>关于我</li>
