--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Javaweb程序员,web后端,蔡广帅简历,CaiSu,后端个人博客,后端工程师">
     <meta name="description" content="蔡广帅的个人小站">
     <meta name="author" content="蔡广帅,CaiSu">
-    <title>蔡广帅个人小站</title>
+    <title>蔡溯（蔡广帅）个人学习小站</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/base.css" type="text/css">
@@ -24,8 +24,8 @@
                     <img src="image/top.png" alt="回到顶部">
                 </div>
                 <div class="myIntro">
-                    <h1 class="fade">Hello, I'm XiaoCai</h1>
-                    <h3 class="fade">一个开源世界的协作者</h3>
+                    <h1 class="fade">Hello, I'm CaiSu</h1>
+                    <h3 class="fade">一个代码世界的学作者</h3>
                     <span class="active fade" id="abMe">关于我</span>
                     <span id="mypro" class="fade">我的作品</span>
                 </div>
