--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="myIntro">
                     <h1 class="fade">Hello, I'm CaiSu</h1>
-                    <h3 class="fade">一个代码世界的学作者</h3>
+                    <h3 class="fade">一个代码世界的写作者</h3>
                     <span class="active fade" id="abMe">关于我</span>
                     <span id="mypro" class="fade">我的作品</span>
                 </div>
