--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="myIntro">
                     <h1 class="fade">Hello, I'm CaiSu</h1>
-                    <h3 class="fade">一个代码世界的写作者</h3>
+                    <h3 class="fade">一个喜欢在开源世界里寻索的人</h3>
                     <span class="active fade" id="abMe">关于我</span>
                     <span id="mypro" class="fade">我的作品</span>
                 </div>
@@ -277,11 +277,10 @@
                                 <p>现在</p>
                             </div>
                             <div class="my-work my-xp-box">
-                                <strong>金尚网上商城</strong>
-                                <p class="ptitle">后端</p>
-                                <p>产品设计</p>
-                                <p>系统架构</p>
-                                <p>编码</p>
+                                <strong>千与千寻</strong>
+                                <p class="ptitle">宫崎骏</p>
+                                <p>已经走到尽头的东西，重生也不过是再一次的消亡。</p>
+                                <p>就像所有的开始，其实都只是一个写好了的结局。</p>
                             </div>
                         </li>
                         <li>
