--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Javaweb程序员,web后端,蔡广帅简历,CaiSu,后端个人博客,后端工程师">
     <meta name="description" content="蔡广帅的个人小站">
     <meta name="author" content="蔡广帅,CaiSu">
-    <title>蔡溯（蔡广帅）个人学习小站</title>
+    <title>蔡溯个人学习小站</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/base.css" type="text/css">
