--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div id="nav-bar" class="bar">
                     <div class="container">
                         <a href="drip.html">
-                            <div class="fl">CaiWeb.cn</div>
+                            <div class="fl">Sheuni.com</div>
                         </a>
                         <ul class="fr nav-ul">
                             <li>关于我</li>
