--- a/drip.html
+++ b/drip.html
@@ -46,7 +46,7 @@
                 <img src="image/header.jpg" alt="我的头像">
             </div>
             <div class="center">
-                <p class="myid">CaiSu</p>
+                <p class="myid">蔡小溯</p>
             </div>
             <div class="my-sort center">
                 <a href="index.html">简历</a>
