--- a/bjq.html
+++ b/bjq.html
@@ -115,7 +115,10 @@ s.parentNode.insertBefore(hm, s);
                 </div>
             </div>
             <p class="artical-detail-date">2016.09.22</p>
-            <p class="center beian">© RedSpite | <a href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action">蜀ICP备16004270号</a></p>
+
+            <p class="center beian">&#169; 2018 guanghejimu.com | 光合积木
+                <!--<a href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">豫ICP备17030450号-2</a>-->
+            </p>
         </div>
     </div>
 </div>
