--- a/article/googleMap.html
+++ b/article/googleMap.html
@@ -133,7 +133,10 @@
                 这里面可以找到很全的监听事件以及调用方法。</p>
 
             <p class="artical-detail-date">2017.12.15</p>
-            <p class="center beian">&#169; 2017 sheuni.com | <a href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">豫ICP备17030450号-1</a></p>
+
+            <p class="center beian">&#169; 2018 guanghejimu.com | 光合积木
+                <!--<a href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">豫ICP备17030450号-2</a>-->
+            </p>
         </div>
     </div>
 </div>
