--- a/index.html
+++ b/index.html
@@ -321,7 +321,9 @@
             </div>
         </div>
 
-        <p class="center beian">&#169; 2018 sheuni.com | <a href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">豫ICP备17030450号-2</a></p>
+        <p class="center beian">&#169; 2018 guanghejimu.com | 光合积木
+            <!--<a href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">豫ICP备17030450号-2</a>-->
+        </p>
     </div>
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/mycv.js"></script>
