--- a/message.html
+++ b/message.html
@@ -41,7 +41,10 @@
                 </div>
             </div>
         </div>
-        <p class="center beian">&#169; 2017 sheuni.com | <a href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">豫ICP备17030450号-1</a></p>
+
+        <p class="center beian">&#169; 2018 guanghejimu.com | 光合积木
+            <!--<a href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">豫ICP备17030450号-2</a>-->
+        </p>
     </div>
 </div>
 <script src="js/jquery-1.11.1.min.js"></script>
