--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div id="nav-bar" class="bar">
                 <div class="container">
                     <a href="drip.html">
-                        <div class="fl">光合积木</div>
+                        <div class="fl">CaiXiaoShuai</div>
                     </a>
                     <ul class="fr nav-ul">
                         <li>关于我</li>
@@ -338,7 +338,7 @@
             <br>
             <br>
             <br>
-            <p class="center beian">&#169; 2018 GuangHeJiMu.com | 光合积木
+            <p class="center beian">&#169; 2018 CaiXiaoShuai.Com | 光合积木
                 <!--<a href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">豫ICP备17030450号-2</a>-->
             </p>
         </div>
