--- a/article/vue170717.html
+++ b/article/vue170717.html
@@ -242,7 +242,7 @@
             </div>
             <p class="artical-detail-date">2018.03.27</p>
 
-            <p class="center beian">&#169; 2018 guanghejimu.com | 光合积木
+            <p class="center beian">&#169; 2018 caixiaoshuai.com | 光合积木
                 <!--<a href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">豫ICP备17030450号-2</a>-->
             </p>
         </div>
