--- a/drip.html
+++ b/drip.html
@@ -114,7 +114,7 @@
                 </div>
             </div>
 
-            <p class="center beian">&#169; 2018 guanghejimu.com | 光合积木
+            <p class="center beian">&#169; 2018 caixiaoshuai.com | 光合积木
                 <!--<a href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">豫ICP备17030450号-2</a>-->
             </p>
         </div>
