--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Javaweb程序员,web后端,蔡广帅简历,CaiSu,后端个人博客,后端工程师">
     <meta name="description" content="蔡广帅的个人小站">
     <meta name="author" content="蔡广帅,CaiSu">
-    <title>光合积木_蔡的个人学习小站</title>
+    <title>蔡的个人小站</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/base.css" type="text/css">
@@ -72,7 +72,7 @@
             <div class="center fades">
                 <p class="center"><img src="image/mypic.jpg" alt="头像"/></p>
                 <div class="my-intro">
-                    <p>我是蔡广帅，喜欢写程序，拥有扎实的Core
+                    <p>我是蔡小帅，喜欢写程序，拥有扎实的Core
                         Java基础，良好的编程风格;熟悉JSP+Servlet+JavaBean模式的WEB开发;熟悉Struts2，Hibernate，Spring等开源框架，了解EJB;
                         熟悉Tomcat服务器，熟悉基于Linux及Unix环境下的软件开发。
                     </p>
