--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="keywords" content="Javaweb程序员,web后端,蔡广帅简历,CaiSu,后端个人博客,后端工程师">
-    <meta name="description" content="蔡广帅的个人小站">
-    <meta name="author" content="蔡广帅,CaiSu">
-    <title>蔡的个人小站</title>
+    <meta name="keywords" content="Javaweb程序员,web后端,蔡广简历,CaiSu,后端个人博客,后端工程师">
+    <meta name="description" content="蔡广的个人小站">
+    <meta name="author" content="蔡广,CaiSu">
+    <title>蔡广小站</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/base.css" type="text/css">
@@ -24,7 +24,7 @@
                 <img src="image/top.png" alt="回到顶部">
             </div>
             <div class="myIntro">
-                <h1 class="fade">你好，我是蔡小溯</h1>
+                <h1 class="fade">你好，我是蔡广</h1>
                 <h3 class="fade">一个爱骑行、爱编程的人。</h3>
                 <span class="active fade" id="abMe">关于我</span>
                 <span id="mypro" class="fade">我的作品</span>
@@ -42,7 +42,7 @@
             <div id="nav-bar" class="bar">
                 <div class="container">
                     <a href="drip.html">
-                        <div class="fl">CaiXiaoShuai</div>
+                        <div class="fl">CaiGuang.cc</div>
                     </a>
                     <ul class="fr nav-ul">
                         <li>关于我</li>
@@ -72,12 +72,12 @@
             <div class="center fades">
                 <p class="center"><img src="image/mypic.jpg" alt="头像"/></p>
                 <div class="my-intro">
-                    <p>我是蔡小帅，喜欢写程序，拥有扎实的Core
+                    <p>我是蔡广，喜欢写程序，拥有扎实的Core
                         Java基础，良好的编程风格;熟悉JSP+Servlet+JavaBean模式的WEB开发;熟悉Struts2，Hibernate，Spring等开源框架，了解EJB;
                         熟悉Tomcat服务器，熟悉基于Linux及Unix环境下的软件开发。
                     </p>
                     <p>学习的路还很长，志同道合的朋友可以加我，一起进步。 我的
-                        <a href="https://github.com/caixiaoshuai" target="_blank">GitHub<img src="image/github.png"
+                        <a href="https://github.com/caiguang" target="_blank">GitHub<img src="image/github.png"
                                                                                              alt="GitHub"/></a>， 微信
                         <a href="image/qrcode.jpg" target="_blank" id="qrcode"><img src="image/weixin.png"
                                                                                     alt="labacai"/></a>。
@@ -338,7 +338,7 @@
             <br>
             <br>
             <br>
-            <p class="center beian">&#169; 2018 CaiXiaoShuai.Com | 光合积木
+            <p class="center beian">&#169; 2018 CaiGuang.cc | 光合积木
                 <!--<a href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">豫ICP备17030450号-2</a>-->
             </p>
         </div>
