--- a/bjq.html
+++ b/bjq.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="keywords" content="张小月,Redspite,富文本输入框,编辑器手写,div可编辑,表情输入框,javascript,css">
-    <meta name="description" content="RedSpite 带表情包的富文本输入框手写插件,可插入图片、可获取代码。">
-    <meta name="author" content="张小月,Redspite">
-    <title>RedSpite » 带表情包的富文本输入框手写插件</title>
+    <meta name="keywords" content="Javaweb程序员,web后端,蔡广简历,后端个人博客,后端工程师">
+    <meta name="description" content="蔡广的个人小站">
+    <meta name="author" content="蔡广,caiguang">
+    <title>点滴 » 蔡广个人学习小站</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/syntaxy.light.min.css">
@@ -116,7 +116,7 @@ s.parentNode.insertBefore(hm, s);
             </div>
             <p class="artical-detail-date">2016.09.22</p>
 
-            <p class="center beian">&#169; 2018 caixiaoshuai.com | 光合积木
+            <p class="center beian">&#169; 2018 CaiGuang.cc | 光合积木
                 <!--<a href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">豫ICP备17030450号-2</a>-->
             </p>
         </div>
