--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="keywords" content="Javaweb程序员,web后端,蔡广简历,CaiSu,后端个人博客,后端工程师">
+    <meta name="keywords" content="Javaweb程序员,web后端,蔡广简历,后端个人博客,后端工程师">
     <meta name="description" content="蔡广的个人小站">
-    <meta name="author" content="蔡广,CaiSu">
+    <meta name="author" content="蔡广">
     <title>蔡广小站</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
