--- a/message.html
+++ b/message.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="keywords" content="Javaweb程序员,web后端,蔡广帅简历,CaiSu,后端个人博客,后端工程师">
-    <meta name="description" content="夙蔡的个人小站">
-    <meta name="author" content="夙蔡,CaiSu">
-    <title>留言板 » CaiSu个人学习小站</title>
+    <meta name="keywords" content="Javaweb程序员,web后端,蔡广简历,后端个人博客,后端工程师">
+    <meta name="description" content="蔡广的个人小站">
+    <meta name="author" content="蔡广">
+    <title>留言板 » 蔡广小站</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/base.css" type="text/css">
@@ -42,7 +42,7 @@
             </div>
         </div>
 
-        <p class="center beian">&#169; 2018 caixiaoshuai.com | 光合积木
+        <p class="center beian">&#169; 2018 CaiGuang.cc | 光合积木
             <!--<a href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">豫ICP备17030450号-2</a>-->
         </p>
     </div>
