--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="蔡广">
     <title>蔡广小站</title>
 
+    <link rel="icon" href="icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/base.css" type="text/css">
     <link rel="stylesheet" href="css/cv.css">
