--- a/index.html
+++ b/index.html
@@ -77,12 +77,10 @@
                         Java基础，良好的编程风格;熟悉JSP+Servlet+JavaBean模式的WEB开发;熟悉Struts2，Hibernate，Spring等开源框架，了解EJB;
                         熟悉Tomcat服务器，熟悉基于Linux及Unix环境下的软件开发。
                     </p>
-                    <p>学习的路还很长，志同道合的朋友可以加我，一起进步。 我的
-                        <a href="https://github.com/caiguang" target="_blank">GitHub<img src="image/github.png"
-                                                                                             alt="GitHub"/></a>， 微信
-                        <a href="image/qrcode.jpg" target="_blank" id="qrcode"><img src="image/weixin.png"
-                                                                                    alt="labacai"/></a>。
+                    <p>GitHub主页：<a href="https://github.com/caiguang" target="_blank">github.com/caiguang</a>
+                        &nbsp;站酷主页：<a href="https://caiguang.zcool.com.cn" target="_blank" id="qrcode">caiguang.zcool.com.cn</a>
                     </p>
+
                 </div>
             </div>
         </div>
