--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                     QQ：511712633
                     <br>
                     <br>
-                    邮箱：caisu@vip.qq.com
+                    邮箱：caiguang@vip.qq.com
                     <!-- UY BEGIN
                     <div id="uyan_frame"></div>
                     <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2110329"></script>
