--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="myIntro">
                 <h1 class="fade">你好，我是蔡广</h1>
-                <h3 class="fade">一个爱骑行、爱编程的人。</h3>
+                <h3 class="fade">一个拥有像素眼的编程爱好者。</h3>
                 <span class="active fade" id="abMe">关于我</span>
                 <span id="mypro" class="fade">我的作品</span>
             </div>
@@ -77,9 +77,11 @@
                         Java基础，良好的编程风格;熟悉JSP+Servlet+JavaBean模式的WEB开发;熟悉Struts2，Hibernate，Spring等开源框架，了解EJB;
                         熟悉Tomcat服务器，熟悉基于Linux及Unix环境下的软件开发。
                     </p>
-                    <p>GitHub主页：<a href="https://github.com/caiguang" target="_blank">github.com/caiguang</a>
-                        &nbsp;站酷主页：<a href="https://caiguang.zcool.com.cn" target="_blank" id="qrcode">caiguang.zcool.com.cn</a>
-                    </p>
+                    <div CLASS="self-link">
+                        <p class="github">GitHub：<a href="https://github.com/caiguang" target="_blank">github.com/caiguang</a></p>
+                    <p class="zcool">站酷：<a href="https://caiguang.zcool.com.cn" target="_blank" id="qrcode">caiguang.zcool.com.cn</a></p>
+                    </div>
+
 
                 </div>
             </div>
