--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <!-- 导航条-->
             <div id="nav-bar" class="bar">
                 <div class="container">
-                    <a href="drip.html">
+                    <!--<a href="drip.html">-->
                         <div class="fl">caiguang.cc</div>
-                    </a>
+                    <!--</a>-->
                     <ul class="fr nav-ul">
                         <li>关于我</li>
                         <li>学习方向</li>
@@ -311,7 +311,6 @@
             <hr>
             <div class="container center fades">
                 <div class="flow">
-                    QQ：511712633
                     <br>
                     <br>
                     邮箱：caiguang@vip.qq.com
@@ -339,7 +338,7 @@
             <br>
             <br>
             <br>
-            <p class="center beian">&#169; 2018 CaiGuang.cc | 光合积木
+            <p class="center beian">&#169; 2021 caiguang.cc | 蔡广小站
                 <!--<a href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">豫ICP备17030450号-2</a>-->
             </p>
         </div>
